[RPP] Fix the annotation colors in dark mode
Dark:
  Side bar: https://screenshot.googleplex.com/mMks74rRqMrGA5t
  Connector: https://screenshot.googleplex.com/CnaEBPDWUaN4tWL
  Label: https://screenshot.googleplex.com/BG6AgXnpBxWVXq4
Light:
  Connector: https://screenshot.googleplex.com/qY8eUJVbisuKoVu
  Label: https://screenshot.googleplex.com/5Ys5zLbj4jKmHf9

Bug: 364610354

--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -12,13 +12,13 @@
   transform: translate(-50%);
   display: flex;
   flex-direction: column;
-  color: var(--color-selected-option);
   align-items: center;
 }
 
 .input-field {
+  background-color: var(--color-background-inverted);
+  color: var(--color-background);
   pointer-events: auto;
-  background-color: var(--sys-color-token-variable);
   border-radius: var(--sys-shape-corner-extra-small);
   white-space: nowrap;
   padding: var(--sys-size-3) var(--sys-size-4);
@@ -28,8 +28,9 @@
 }
 
 .input-field:focus {
-  background-color: var(--color-selected-option);
-  color: var(--sys-color-token-variable);
+  background-color: var(--color-background);
+  color: var(--color-background-inverted);
+  outline: 2px solid var(--color-background-inverted);
 }
 
 .connectorContainer {
